# plant-clef-2025

./: .gitignore  .pre-commit-config.yaml  README.md  build_hierarchies.py  no_plant_pipeline.py  pipeline.py  pyproject.toml
config/: config.yaml  submission_config.yaml  train_config.yaml
docs/: AtlanticAnalytica.md  DSatGT.md  README.md  no-plants-datasets.md  todo.md
docs/dinov2_code/: main.py  merge_fsdp_checkpoint.py  ssl_meta_arch.py  train.py  vitb14reg4_lucas.yaml
misc/: README.md
notebooks/: README.md  combine_submissions.ipynb  official-notebook-tiling-inference.ipynb  official-starter-notebook-inference-on-test-data.ipynb  official-starter-notebook-inference-single-image.ipynb  show-images-and-their-augmentations.ipynb
other/: no_plant_pipeline.py
predictions/: README.md  merge.ipynb  predict.ipynb
src/: augmentation.py  data.py  data_manager.py  evaluating.py  merged_model.py  prediction.py  submission.py  training.py  utils.py  vit_multi_head_classifier.py
submissions/: README.md  analysis.ipynb  default_config.yaml  similarity.ipynb
submissions/data/: example.yaml  submission_5heads_1layer_tile_4_5_overlaps_0_0_topk_1_minscore_001_use_gf.csv  submission_5heads_1layer_tile_4_5_overlaps_0_0_topk_1_minscore_001_use_gf.yaml  submission_5heads_1layer_tile_5_overlaps_0_topk_1_minscore_001_use_gf.csv  submission_5heads_1layer_tile_5_overlaps_0_topk_1_minscore_001_use_gf.yaml  (+24 more)
test/: augmentation_test.py  data_test.py  evaluating_metrics_test.py
util/: combine_train_test_val.py
utils/: README.md  build_hierarchies.py  sgf_distributions.py
